--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="38dp"
             android:layout_marginEnd="54dp"
             android:fontFamily="cursive"
-            android:text="Madharchod"
+            android:text="User"
             android:textSize="50sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
