Successfully added a fragment into a fragment as required

--- a/app/src/main/res/layout/fragment_timetable_page.xml
+++ b/app/src/main/res/layout/fragment_timetable_page.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".taskbarFragments.TimetableMain">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".taskbarFragments.TimetablePageFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
@@ -13,34 +13,38 @@
         android:background="#999999"
         app:tabIndicatorColor="@color/black"
         app:tabIndicatorFullWidth="true"
-        android:id="@+id/taskbar_tablayout">
+        android:id="@+id/days_tablayout">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Monday"/>
+            android:text="@string/monday"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tuesday"/>
+            android:text="@string/tuesday"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Wednesday"/>
+            android:text="@string/wednesday"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Thursday"/>
+            android:text="@string/thursday"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Friday"/>
-
-
+            android:text="@string/friday"/>
     </com.google.android.material.tabs.TabLayout>
 
+    <!--Adding Viewpager below the tab layout-->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/days_tablayout"/>
 </RelativeLayout>
