--- a/app/src/main/res/layout/fragment_monday_timetable.xml
+++ b/app/src/main/res/layout/fragment_monday_timetable.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".innerFragments.MondayTimetableFragment">
 
     <TextView
+        android:id="@+id/timetable_day_txtview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textAlignment="center"
         android:background="@color/blue"
         android:textColor="@color/black"
         android:text="TIMETABLE FOR MONDAY"/>
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/monday_recyclerView"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/timetable_day_txtview">
+
+    </androidx.recyclerview.widget.RecyclerView>
+</RelativeLayout>
