--- a/app/src/main/res/drawable/welcome_background.xml
+++ b/app/src/main/res/drawable/welcome_background.xml
@@ -10,6 +10,8 @@
                 android:gradientRadius="100%p"
                 android:centerX="0.08"
                 android:centerY="0"/>
+            <corners android:radius="45dp"/>
         </shape>
+
     </item>
 </layer-list>
