--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -8,7 +8,7 @@
         android:id="@+id/timetable_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/vistaBlue">
+        android:backgroundTint="@color/colombiaBlue">
         <!--Splitting into 2 sections for time and module-->
         <LinearLayout
             android:layout_width="match_parent"
