--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="airSuperiorityBlue">#6096BA</color>
     <color name="tropicalIndigo">#8A84E2</color>
     <color name="cambridgeBlue">#72BDA3</color>
+    <color name="colombiaBlue">#D3F2FF</color>
     <color name="eerieBlack">#191919</color>
     <color name="snow">#FFFAFB</color>
     <color name="vistaBlue">#7899D4</color>
@@ -13,4 +14,5 @@
     <color name="lighterBlueAnime">#00AFB9</color>
     <color name="yellowtintAnime">#FED9B7</color>
     <color name="orangetintAnime">#F07167</color>
+    <color name="platinum">#E0E0E0</color>
 </resources>
