--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -9,30 +9,38 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/contrasting_yellow_orange">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="278dp"
+            android:layout_height="209dp"
+            android:layout_marginTop="28dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/university_of_entropy_logo" />
 
         <TextView
             android:id="@+id/loginTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="173dp"
-            android:layout_marginTop="193dp"
-            android:layout_marginEnd="174dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/anton"
             android:text="@string/login"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <EditText
             android:id="@+id/emailEdtxt"
             android:layout_width="270dp"
             android:layout_height="52dp"
-            android:layout_marginStart="70dp"
             android:layout_marginTop="43dp"
-            android:layout_marginEnd="71dp"
             android:hint="@string/enterEmailPrompt"
+            android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginTxt" />
@@ -41,9 +49,7 @@
             android:id="@+id/passwordEdtxt"
             android:layout_width="270dp"
             android:layout_height="52dp"
-            android:layout_marginStart="70dp"
             android:layout_marginTop="46dp"
-            android:layout_marginEnd="71dp"
             android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,23 +58,21 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="30dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="190dp"
-            android:layout_marginTop="31dp"
-            android:layout_marginEnd="191dp"
+            android:layout_width="40dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="21dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerUserTxt" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="156dp"
             android:layout_marginTop="47dp"
-            android:layout_marginEnd="156dp"
+            android:background="@drawable/login_logout_btn"
             android:text="@string/login"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,17 +81,14 @@
 
         <TextView
             android:id="@+id/registerUserTxt"
-            android:layout_width="146dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="132dp"
-            android:layout_marginTop="67dp"
-            android:layout_marginEnd="133dp"
-            android:layout_marginBottom="95dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="78dp"
             android:text="@string/new_user_register_txt"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            tools:textColor="@color/eerieBlack" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
