Completed the app

--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -44,7 +44,7 @@
                         android:layout_width="202dp"
                         android:layout_height="143dp"
                         android:layout_marginTop="32dp"
-                        android:src="@drawable/studentdpfree"
+                        android:src="@drawable/student_dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -54,7 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="Camilo Barreto"
+                        android:text="Light Yagami"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -66,7 +66,7 @@
                         android:id="@+id/student_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="c.s.barreto@student.reading.ac.uk"
+                        android:text="light.note@student.entropy.ac.uk"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="@+id/student_name"
